# jnitest

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/midea/jnitest/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/native/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/rj/: CMakeLists.txt  native-rj.cpp  rjdva_c.h
app/src/main/java/com/midea/jnitest/: MainActivity.kt
app/src/main/java/com/midea/jnitest/hwstk/: RJCtrl.kt
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/midea/jnitest/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
